# alptherm-icon

./: .gitignore  README.md  pyproject.toml
configs/regions/: inntal_steinberge.geojson  voralpen_liechti.geojson
data/: archive.env.example  monitoring.env.example  watchlist.example.json
docs/: Implementierungsplan_ALPTHERM_ICON.typ  komp_c_alptherm_spec.md  references.bib  references.md
notebooks/: komp_a_ahd_sanity_check.ipynb  komp_a_basins_level9.ipynb  komp_a_region_map.ipynb
ops/cron/: archive.sh  eval.sh
ops/systemd/: alptherm-dashboard.service  alptherm-eval.service  alptherm-eval.timer  alptherm-ogn.service
src/alptherm_icon/: __init__.py
src/alptherm_icon/archive/: __init__.py  __main__.py  archiver.py  bbox.py  manifest.py  s3.py  trigger.py  variables.py  zarr_append.py
src/alptherm_icon/dashboard/: __init__.py  app.py  data_loader.py
src/alptherm_icon/icon_pipeline/: __init__.py  __main__.py  icon.py
src/alptherm_icon/igc_pipeline/: __init__.py  __main__.py  circling.py  clean.py  clean_cache.py  ogn_tracks.py  track.py
src/alptherm_icon/model/: __init__.py  __main__.py  forcing.py  mixed_layer.py  parcel.py  reference.py  thermo.py
src/alptherm_icon/monitoring/: __init__.py  __main__.py  alerter.py  heartbeat.py
src/alptherm_icon/ogn/: __init__.py  __main__.py  (+2 more)
tests/: test_ahd.py  test_archive_s3.py  test_basins.py  test_clean.py  test_dem.py  test_forcing.py  test_icon.py  test_liechti_golden.py  test_manifest.py  test_mixed_layer.py  test_parcel.py  test_perimeter.py  test_polygon.py  test_thermo.py  test_thermo_moist.py
(+23 files in other folders)
