[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alptherm-icon"
version = "0.0.1"
description = "ALPTHERM/Regtherm thermal forecast on top of DWD ICON, validated against IGC flights"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "TBD" }
authors = [{ name = "Alex" }]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "xarray>=2024.1",
    "netcdf4>=1.6",
    "geopandas>=0.14",
    "rasterio>=1.3",
    "shapely>=2.0",
    "pyproj>=3.6",
    "cfgrib>=0.9.10",
    "eccodes>=2.33",
    "herbie-data>=2024.1",
    "aerofiles>=1.0",
    "requests>=2.31",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
regionalize = [
    "pysal>=24.1",
    "spopt>=0.6",
]
optimize = [
    "scikit-optimize>=0.10",
    "optuna>=3.5",
]
viz = [
    "matplotlib>=3.8",
    "plotly>=5.18",
    "folium>=0.15",
    "contextily>=1.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "ipykernel>=6.29",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
